tab switching using circle bar

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </div>
             </div>
             <div class="pg-identifier">
-                <div class="sm-pg-identifier" id="pg-1"></div>
-                <div class="sm-pg-identifier" id="pg-2"></div>
-                <div class="sm-pg-identifier" id="pg-3"></div>
-                <div class="sm-pg-identifier" id="pg-4"></div>
+                <div class="sm-pg-identifier" id="pg-1" onclick="navigatePage(1)"></div>
+                <div class="sm-pg-identifier" id="pg-2" onclick="navigatePage(2)"></div>
+                <div class="sm-pg-identifier" id="pg-3" onclick="navigatePage(3)"></div>
+                <div class="sm-pg-identifier" id="pg-4" onclick="navigatePage(0)"></div>
             </div>
 
             <div class="blank3" id="blank3">
@@ -68,7 +68,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Chương 1</h5>
                             <p class="card-text">Chương 1 bày tỏ ý nghĩa hãy luôn kiên nhẫn, học hỏi và dấn thân vào đam mê của bạn để đạt được thành công lớn.</p>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal3" onclick="disableWheel()">Thông tin nhóm</button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal3" onclick="disableWheel()">Nội dung</button>
                         </div>
                     </div>
 
@@ -77,7 +77,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Chương 2</h5>
                             <p class="card-text">Chương 2 kể về tuổi 20 suy thoái của nhạc sĩ, tình yêu & đau khổ, mất niềm vui, nhớ ngày thơ ấu & đi tìm tình yêu cuối cùng.</p>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal4" onclick="disableWheel()">Thông tin nhóm</button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal4" onclick="disableWheel()">Nội dung</button>
                         </div>
                     </div>
                 </div><br>
