Change page and add credit

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </div>
             </div>
             <div class="pg-identifier">
-                <div class="sm-pg-identifier" id="pg-1" onclick="navigatePage(1)"></div>
-                <div class="sm-pg-identifier" id="pg-2" onclick="navigatePage(2)"></div>
-                <div class="sm-pg-identifier" id="pg-3" onclick="navigatePage(3)"></div>
-                <div class="sm-pg-identifier" id="pg-4" onclick="navigatePage(0)"></div>
+                <div class="sm-pg-identifier" id="pg-1" onclick="navigatePage(0)"></div>
+                <div class="sm-pg-identifier" id="pg-2" onclick="navigatePage(1)"></div>
+                <div class="sm-pg-identifier" id="pg-3" onclick="navigatePage(2)"></div>
+                <div class="sm-pg-identifier" id="pg-4" onclick="navigatePage(3)"></div>
             </div>
 
             <div class="blank3" id="blank3">
@@ -119,6 +119,7 @@
                 <div class="modal-body">
                     <h5>Thành viên</h5><br>
                     <p>- Nguyễn Hoàng Nhật Anh: Website Developer</p>
+                    <p>- Ngô Trí Dũng: Leader</p>
                     <p>- Phạm Tuấn Kiệt: Phân tích hình ảnh nghệ thuật</p>
                     <p>- Nguyễn Nam Khánh: Phân tích bố cục đoạn văn</p>
                     <p>- Trần Quốc Anh: Phân tích giá trị dân tộc</p>
