--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h6>I: Sơ lược về Trịnh Công Sơn</h6>
                     <p>Trịnh Công Sơn, nhạc sĩ tài hoa của Việt Nam, chào đời vào ngày 28 tháng 2 năm 1939 tại thôn Hà Tĩnh, tỉnh Hà Nội. Ông là một biểu tượng về âm nhạc dân ca và ballad tại Việt Nam. Với tài năng và tâm hồn nghệ sĩ, ông đã để lại dấu ấn sâu sắc trong lĩnh vực âm nhạc của đất nước.</p>
                     <h6>II: Sự Nghiệp và Tác Phẩm Nổi Tiếng</h6>
-                    <p>Trịnh Công Sơn đã sáng tác nhiều bản nhạc nổi tiếng như "Hát Cho Người Đi Rồi," "Nắng Thủy Tinh," và "Diễm Xưa." Những ca khúc này thường mang thông điệp nhân văn và tâm hồn, thể hiện những cảm xúc sâu lắng về tình yêu, cuộc sống và xã hội. Tác phẩm của ông đã lan tỏa tới nhiều thế hệ người yêu nhạc và trở thành biểu tượng của nền nhạc Việt Nam.</p>
+                    <p>Trịnh Công Sơn đã sáng tác nhiều bản nhạc nổi tiếng như "Biển nghìn thu ở lại," "Bên sông," và "Diễm Xưa." Những ca khúc này thường mang thông điệp nhân văn và tâm hồn, thể hiện những cảm xúc sâu lắng về tình yêu, cuộc sống và xã hội. Tác phẩm của ông đã lan tỏa tới nhiều thế hệ người yêu nhạc và trở thành biểu tượng của nền nhạc Việt Nam.</p>
                     <h6>III: Thành Tựu và Tầm Ảnh Hưởng</h6>
                     <p>Trịnh Công Sơn đã đoạt nhiều giải thưởng danh giá trong sự nghiệp âm nhạc của mình, bao gồm cả Giải thưởng Hoàng gia về Nhạc Việt Nam. Tác phẩm của ông không chỉ được yêu thích trong nước mà còn được biết đến và yêu mến trên toàn thế giới. Những bản nhạc của ông đã được dịch ra nhiều ngôn ngữ và thể hiện bởi nhiều nghệ sĩ quốc tế.</p>
                     <h6>IV: Kế Hậu và Tình Cảm Cộng Đồng</h6>
